fix(superadmin): Add i18n support for Arabic translations
ISSUE: User reported missing Arabic translations on superadmin page

Changes:
- Added superadmin translation keys to ar.json and en.json
- Integrated useI18n() hook in app/superadmin/issues/page.tsx
- Translated UI elements: title, buttons, messages, labels
- Covers: Superadmin, Settings, Logout, Verifying access, Issue tracker UI

Translations added:
- superadmin.title, .settings, .logout, .verifyingAccess
- superadmin.issues.* (title, subtitle, buttons, filters, stats, table)

User Impact:
- Arabic language now displays correctly on superadmin page
- Consistent with rest of application i18n pattern
- All key UI elements localized

Validation:
- pnpm typecheck: 0 errors
- pnpm eslint app/superadmin/issues/page.tsx: 0 errors

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -4809,5 +4809,61 @@
         }
       }
     }
+  },
+  "superadmin": {
+    "title": "المسؤول الأعلى",
+    "settings": "الإعدادات",
+    "logout": "تسجيل الخروج",
+    "verifyingAccess": "جاري التحقق من الصلاحيات...",
+    "issues": {
+      "title": "متتبع مشاكل النظام",
+      "subtitle": "الوصول الكامل للنظام • تتبع وإدارة جميع المشاكل",
+      "refresh": "تحديث",
+      "export": "تصدير",
+      "import": "استيراد",
+      "importTitle": "استيراد المشاكل",
+      "importDesc": "الصق مصفوفة JSON للمشاكل أو نص بسيط (عنوان واحد لكل سطر)",
+      "add": "إضافة مشكلة",
+      "search": "بحث في المشاكل...",
+      "filters": {
+        "status": "الحالة",
+        "priority": "الأولوية",
+        "category": "الفئة",
+        "all": "الكل"
+      },
+      "views": {
+        "all": "جميع المشاكل",
+        "quickWins": "إصلاحات سريعة",
+        "stale": "قديمة (>30 يوم)",
+        "resolved": "محلولة"
+      },
+      "stats": {
+        "total": "الإجمالي",
+        "open": "مفتوحة",
+        "closed": "مغلقة",
+        "healthScore": "درجة الصحة",
+        "quickWins": "إصلاحات سريعة",
+        "stale": "قديمة",
+        "blocked": "محظورة",
+        "recentlyClosed": "مغلقة مؤخراً"
+      },
+      "table": {
+        "id": "المعرّف",
+        "title": "العنوان",
+        "category": "الفئة",
+        "priority": "الأولوية",
+        "status": "الحالة",
+        "location": "الموقع",
+        "updated": "آخر تحديث",
+        "actions": "الإجراءات"
+      },
+      "empty": "لم يتم العثور على مشاكل",
+      "loading": "جاري التحميل...",
+      "error": "خطأ في تحميل المشاكل",
+      "exportSuccess": "تم التصدير بنجاح",
+      "importSuccess": "تم الاستيراد بنجاح",
+      "deleteSuccess": "تم الحذف بنجاح",
+      "updateSuccess": "تم التحديث بنجاح"
+    }
   }
 }
