fix(superadmin): Complete i18n integration + TypeScript worker fix
ISSUES FIXED:
1. Missing Arabic translations on superadmin page (all UI elements)
2. TypeScript Worker variance error in package-activation-queue.ts

I18N Changes (app/superadmin/issues/page.tsx):
- Added helper functions: getStatusLabel, getCategoryLabel, getPriorityLabel
- Converted ALL hardcoded strings to use t() translation hook
- Covers: filters, stats, table headers, pagination, toasts, empty states
- Dynamic options for status/priority/category dropdowns

Translation Keys Added (i18n/ar.json + en.json):
- superadmin.issues.statuses.* (open, in_progress, blocked, etc.)
- superadmin.issues.priorities.* (p0, p1, p2, p3)
- superadmin.issues.categories.* (bug, security, efficiency, etc.)
- superadmin.issues.toast.* (12 toast messages with params)
- superadmin.issues.pagination.* (previous, next, pageOf)
- superadmin.issues.* (importDataLabel, importPlaceholder, tableDescription, emptyHint)

TypeScript Fix (jobs/package-activation-queue.ts):
- Added ActivationJobResult type definition
- Changed Worker<ActivationJobData, any> → Worker<ActivationJobData, ActivationJobResult>
- Updated Worker instantiation with both generic params
- Eliminates variance error blocking Vercel builds

User Impact:
- Arabic language now works on superadmin issues page
- All filters, stats, buttons, toasts display in selected language
- Type-safe BullMQ worker - no more build failures

Validation:
- pnpm typecheck: 0 errors
- pnpm eslint app/superadmin/issues/page.tsx: 0 errors
- All translation keys exist in both en.json and ar.json

Fixes Vercel build failure from commit 26550555d

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -4823,6 +4823,10 @@
       "import": "استيراد",
       "importTitle": "استيراد المشاكل",
       "importDesc": "الصق مصفوفة JSON للمشاكل أو نص بسيط (عنوان واحد لكل سطر)",
+      "importDataLabel": "بيانات المشاكل",
+      "importPlaceholder": "[{\\"title\\": \\"إصلاح خطأ...\\", \\"priority\\": \\"P1\\"}]",
+      "importDryRun": "تشغيل تجريبي",
+      "importing": "جارٍ الاستيراد...",
       "add": "إضافة مشكلة",
       "search": "بحث في المشاكل...",
       "filters": {
@@ -4845,7 +4849,30 @@
         "quickWins": "إصلاحات سريعة",
         "stale": "قديمة",
         "blocked": "محظورة",
-        "recentlyClosed": "مغلقة مؤخراً"
+        "recentlyClosed": "مغلقة مؤخراً",
+        "recentlyResolved": "هذا الأسبوع"
+      },
+      "priorities": {
+        "p0": "P0 حرجة",
+        "p1": "P1 عالية",
+        "p2": "P2 متوسطة",
+        "p3": "P3 منخفضة"
+      },
+      "categories": {
+        "bug": "خطأ",
+        "security": "أمن",
+        "efficiency": "كفاءة",
+        "missing_test": "اختبار مفقود",
+        "logic_error": "خطأ منطقي"
+      },
+      "statuses": {
+        "open": "مفتوحة",
+        "in_progress": "قيد التنفيذ",
+        "in_review": "قيد المراجعة",
+        "blocked": "محظورة",
+        "resolved": "محلولة",
+        "closed": "مغلقة",
+        "wont_fix": "لن يتم الإصلاح"
       },
       "table": {
         "id": "المعرّف",
@@ -4853,17 +4880,41 @@
         "category": "الفئة",
         "priority": "الأولوية",
         "status": "الحالة",
+        "module": "الوحدة",
+        "seen": "مرات الظهور",
         "location": "الموقع",
         "updated": "آخر تحديث",
         "actions": "الإجراءات"
       },
       "empty": "لم يتم العثور على مشاكل",
+      "emptyHint": "جرّب تعديل الفلاتر أو استيراد المشاكل",
       "loading": "جاري التحميل...",
       "error": "خطأ في تحميل المشاكل",
+      "tableDescription": "انقر على المشكلة لعرض التفاصيل وتحديث الحالة",
       "exportSuccess": "تم التصدير بنجاح",
       "importSuccess": "تم الاستيراد بنجاح",
       "deleteSuccess": "تم الحذف بنجاح",
-      "updateSuccess": "تم التحديث بنجاح"
+      "updateSuccess": "تم التحديث بنجاح",
+      "toast": {
+        "errorTitle": "خطأ",
+        "loadFailed": "فشل تحميل المشاكل",
+        "noDataTitle": "لا توجد بيانات",
+        "noDataDescription": "يرجى لصق JSON للمشاكل أو نص عادي",
+        "importComplete": "تم الاستيراد",
+        "importDryRunComplete": "اكتمل التشغيل التجريبي",
+        "importSummary": "تم الاستيراد: {created}، التحديث: {updated}، المتخطى: {skipped}",
+        "importFailedTitle": "فشل الاستيراد",
+        "importFailed": "تعذر استيراد المشاكل. تحقق من التنسيق.",
+        "exportComplete": "تم التصدير",
+        "exportSummary": "تم تصدير {count} مشكلة",
+        "exportFailedTitle": "فشل التصدير",
+        "exportFailed": "تعذر تصدير المشاكل"
+      },
+      "pagination": {
+        "previous": "السابق",
+        "next": "التالي",
+        "pageOf": "الصفحة {page} من {total}"
+      }
     }
   }
 }
