feat(superadmin): Add complete control center with sidebar navigation
IMPLEMENTATION COMPLETE:

✅ Superadmin Control Center
- Created SuperadminSidebar component with 15 module links
- Created SuperadminHeader with user info, language switcher, logout
- Updated superadmin layout to include shell (sidebar + header + content)
- Login page remains standalone (no shell)

✅ Module Routes (all navigable, placeholder pages)
- /superadmin/issues (already implemented)
- /superadmin/tenants - Orgs/Tenants management
- /superadmin/users - Users management
- /superadmin/roles - RBAC configuration
- /superadmin/audit - Audit logs
- /superadmin/features - Feature flags
- /superadmin/integrations - Third-party admin
- /superadmin/jobs - Queue monitor
- /superadmin/system - System settings
- /superadmin/billing - Plans/subscriptions
- /superadmin/translations - i18n admin
- /superadmin/database - DB admin
- /superadmin/security - Security center
- /superadmin/analytics - Analytics dashboard
- /superadmin/notifications - Notifications config

✅ i18n Support
- Added 19 new translation keys for navigation
- Rebuilt dictionaries: 31,402 → 31,421 keys
- Full AR/EN support for all module names

FIXES:
- ✅ Sidebar no longer redirects to login (proper navigation)
- ✅ All superadmin modules visible and clickable
- ✅ Header shows user (EngSayh), language switcher, logout
- ✅ Clean dark theme (slate-900/950) consistent throughout
- ✅ Removed console.log statements (lint clean)
- ✅ Removed unused imports

TESTING:
- pnpm typecheck: PASS
- pnpm lint: PASS
- All routes created with proper structure
- Sidebar active state highlights current route

This completes the superadmin control center implementation.

--- a/i18n/sources/superadmin.translations.json
+++ b/i18n/sources/superadmin.translations.json
@@ -1,9 +1,28 @@
 {
   "en": {
     "superadmin.title": "Superadmin",
+    "superadmin.controlCenter": "Control Center",
+    "superadmin.fullAccess": "Full System Access",
+    "superadmin.account": "Account",
     "superadmin.settings": "Settings",
     "superadmin.logout": "Logout",
+    "superadmin.loggingOut": "Logging out...",
     "superadmin.verifyingAccess": "Verifying access...",
+    "superadmin.nav.issues": "Issues Tracker",
+    "superadmin.nav.tenants": "Tenants / Orgs",
+    "superadmin.nav.users": "Users Management",
+    "superadmin.nav.roles": "Roles & Permissions",
+    "superadmin.nav.audit": "Audit Logs",
+    "superadmin.nav.features": "Feature Flags",
+    "superadmin.nav.integrations": "Integrations",
+    "superadmin.nav.jobs": "Jobs & Queues",
+    "superadmin.nav.system": "System Settings",
+    "superadmin.nav.billing": "Billing & Plans",
+    "superadmin.nav.translations": "Translations",
+    "superadmin.nav.database": "Database Admin",
+    "superadmin.nav.security": "Security Center",
+    "superadmin.nav.analytics": "Analytics",
+    "superadmin.nav.notifications": "Notifications",
     "superadmin.issues.title": "System Issue Tracker",
     "superadmin.issues.subtitle": "Full system access • Track and manage all issues",
     "superadmin.issues.refresh": "Refresh",
@@ -88,9 +107,28 @@
   },
   "ar": {
     "superadmin.title": "المسؤول الأعلى",
+    "superadmin.controlCenter": "مركز التحكم",
+    "superadmin.fullAccess": "وصول كامل للنظام",
+    "superadmin.account": "الحساب",
     "superadmin.settings": "الإعدادات",
     "superadmin.logout": "تسجيل الخروج",
+    "superadmin.loggingOut": "جارٍ تسجيل الخروج...",
     "superadmin.verifyingAccess": "جارٍ التحقق من الوصول...",
+    "superadmin.nav.issues": "متتبع المشاكل",
+    "superadmin.nav.tenants": "المستأجرون / المؤسسات",
+    "superadmin.nav.users": "إدارة المستخدمين",
+    "superadmin.nav.roles": "الأدوار والصلاحيات",
+    "superadmin.nav.audit": "سجلات التدقيق",
+    "superadmin.nav.features": "أعلام الميزات",
+    "superadmin.nav.integrations": "التكاملات",
+    "superadmin.nav.jobs": "المهام والصفوف",
+    "superadmin.nav.system": "إعدادات النظام",
+    "superadmin.nav.billing": "الفوترة والخطط",
+    "superadmin.nav.translations": "الترجمات",
+    "superadmin.nav.database": "إدارة قاعدة البيانات",
+    "superadmin.nav.security": "مركز الأمان",
+    "superadmin.nav.analytics": "التحليلات",
+    "superadmin.nav.notifications": "الإشعارات",
     "superadmin.issues.title": "متتبع مشاكل النظام",
     "superadmin.issues.subtitle": "وصول كامل للنظام • تتبع وإدارة جميع المشاكل",
     "superadmin.issues.refresh": "تحديث",
