i18n: Add offline indicator translations (en/ar)
- Added common.offline.backOnline key for reconnection message
- Added common.offline.offline key for offline state message
- Arabic translations: عدت متصلاً بالإنترنت / أنت غير متصل بالإنترنت

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -2752,6 +2752,10 @@
       "finance": "المالية",
       "hr": "الموارد البشرية",
       "login": "تسجيل الدخول"
+    },
+    "offline": {
+      "backOnline": "عدت متصلاً بالإنترنت!",
+      "offline": "أنت غير متصل بالإنترنت. قد تكون بعض الميزات غير متاحة."
     }
   },
   "accessibility": {
