perf(api): Add maxTimeMS to all aggregate pipelines + cache headers
Phase 9-10: Aggregate Safety + Cache Headers Extension

- app/api/aqar/listings/search: Added maxTimeMS(5000) to facets aggregate
- app/api/aqar/listings/search: Added Cache-Control header (public, 60s)
- app/api/issues/stats: Added maxTimeMS(10000) to all 7 aggregates
- app/api/souq/sellers/[id]/dashboard: Added maxTimeMS(10000) to 3 aggregates
- issue-tracker/app/api/issues/stats: Added maxTimeMS(10000) to 6 aggregates

AUDIT-2025-12-18: Prevents unbounded query timeouts under load

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -2736,7 +2736,7 @@
     "forgotPassword": "نسيت كلمة المرور؟",
     "signUp": "إنشاء حساب",
     "online": "متصل",
-    "offline": "غير متصل",
+    "offlineStatus": "غير متصل",
     "logout": "تسجيل الخروج",
     "popularPages": "الصفحات الشائعة",
     "totals": "الإجماليات",
