--- a/i18n/chunks/en/misc.json
+++ b/i18n/chunks/en/misc.json
@@ -4771,7 +4771,7 @@
   "common.no": "No",
   "common.noNotifications": "No new notifications",
   "common.notAvailable": "Not available",
-  "common.offline": "Offline",
+  "common.offlineStatus": "Offline",
   "common.online": "Online",
   "common.optional": "Optional",
   "common.or": "OR",
