--- a/i18n/sources/common.translations.json
+++ b/i18n/sources/common.translations.json
@@ -77,7 +77,7 @@
     "common.no": "No",
     "common.noNotifications": "No new notifications",
     "common.notAvailable": "Not available",
-    "common.offline": "Offline",
+    "common.offlineStatus": "Offline",
     "common.online": "Online",
     "common.optional": "Optional",
     "common.or": "OR",
@@ -217,7 +217,7 @@
     "common.no": "لا",
     "common.noNotifications": "لا توجد إشعارات جديدة",
     "common.notAvailable": "غير متاح",
-    "common.offline": "غير متصل",
+    "common.offlineStatus": "غير متصل",
     "common.online": "متصل",
     "common.optional": "اختياري",
     "common.or": "أو",
