feat(tests): P110 - Add comprehensive API test coverage
- Add 85 new tests (3896 total passing)
- Add tests/api/finance/ tests (ledger, expenses, invoices)
- Add tests/api/superadmin/ tests (logout, organizations, phases, tenant-switch-audit)
- Add tests/unit/lib/icu-completeness.test.ts for i18n validation
- Fix i18n missing keys in ar.json/en.json
- Update marketplace routes for production stability
- TypeScript: 0 errors
- All 3896 tests passing

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -4838,7 +4838,7 @@
       "importTitle": "استيراد المشاكل",
       "importDesc": "الصق مصفوفة JSON للمشاكل أو نص بسيط (عنوان واحد لكل سطر)",
       "importDataLabel": "بيانات المشاكل",
-      "importPlaceholder": "[{\\"title\\": \\"إصلاح خطأ...\\", \\"priority\\": \\"P1\\"}]",
+      "importPlaceholder": "[{\"title\": \"إصلاح خطأ...\", \"priority\": \"P1\"}]",
       "importDryRun": "تشغيل تجريبي",
       "importing": "جارٍ الاستيراد...",
       "add": "إضافة مشكلة",
