fix(lint): resolve ESLint errors + add .lean() performance optimization
Phase 142:
- Add .lean() to FMPMPlan.findOne in GET /api/pm/plans/[id]
- Add .lean() to Vendor.findOne in GET /api/vendors/[id]

ESLint fixes:
- Remove unused cache imports from marketplace/products/route.ts
- Remove unnecessary eslint-disable directive in aqar listings PATCH
- Prefix unused SkeletonDashboard import with underscore
- Replace console.log with proper action in CommandPalette
- Fix empty interface type in command.tsx
- Prefix unused Table type import with underscore
- Prefix unused selectedIds/issue params with underscore
- Remove unnecessary eslint-disable directives for img elements

Reduces Mongoose document hydration overhead for read-only queries

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -4731,11 +4731,11 @@
       "balance": "الرصيد"
     }
   },
-  "Loading": "جارٍ التحميل",
-  "Optional payment notes": "ملاحظات الدفع (اختياري)",
-  "Loading invoices": "جارٍ تحميل الفواتير",
-  "Creating": "جارٍ الإنشاء",
-  "Loading account activity": "جارٍ تحميل نشاط الحساب",
+  "Loading": "جارٍ التحميل...",
+  "Optional payment notes": "ملاحظات اختيارية للدفع...",
+  "Loading invoices": "جارٍ تحميل الفواتير...",
+  "Creating": "جارٍ الإنشاء...",
+  "Loading account activity": "جارٍ تحميل نشاط الحساب...",
   "auto": {
     "fm": {
       "hr": {
