feat(aqar): add SearchFiltersNew with standard filter components
P3-AQAR-FILTERS RESOLVED:
- Created SearchFiltersNew.tsx using standard components:
  ✅ FacetMultiSelect (property types, cities, amenities, bedrooms, bathrooms)
  ✅ NumericRangeFilter (price range, area range)
  ✅ useTableQueryState (URL sync + localStorage)
- Created /aqar/search page using the new component
- Added 18 unit tests for SearchFiltersNew
- Updated integration tests (25 tests total)
- All 52 tests pass

Files added:
- components/aqar/SearchFiltersNew.tsx (450 lines)
- app/(app)/aqar/search/page.tsx (265 lines)
- tests/unit/components/aqar/SearchFiltersNew.test.ts

Quality gates:
- TypeScript: 0 errors
- ESLint: 0 warnings
- Tests: 52/52 pass

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -4812,9 +4812,34 @@
   },
   "superadmin": {
     "title": "المسؤول الأعلى",
+    "controlCenter": "مركز التحكم",
     "settings": "الإعدادات",
     "logout": "تسجيل الخروج",
     "verifyingAccess": "جاري التحقق من الصلاحيات...",
+    "nav": {
+      "issues": "المشاكل",
+      "ssot": "عارض SSOT",
+      "tenants": "المستأجرون",
+      "users": "المستخدمون",
+      "roles": "الأدوار",
+      "audit": "سجلات التدقيق",
+      "features": "الميزات",
+      "integrations": "التكاملات",
+      "jobs": "المهام",
+      "system": "النظام",
+      "billing": "الفواتير",
+      "translations": "الترجمات",
+      "database": "قاعدة البيانات",
+      "security": "الأمان",
+      "analytics": "التحليلات",
+      "notifications": "الإشعارات",
+      "catalog": "الكتالوج",
+      "impersonate": "انتحال الهوية",
+      "importExport": "استيراد/تصدير",
+      "reports": "التقارير",
+      "support": "الدعم",
+      "vendors": "الموردون"
+    },
     "issues": {
       "title": "متتبع مشاكل النظام",
       "subtitle": "الوصول الكامل للنظام • تتبع وإدارة جميع المشاكل",
