--- a/i18n/en.json
+++ b/i18n/en.json
@@ -4842,9 +4842,34 @@
   },
   "superadmin": {
     "title": "Superadmin",
+    "controlCenter": "Control Center",
     "settings": "Settings",
     "logout": "Logout",
     "verifyingAccess": "Verifying access...",
+    "nav": {
+      "issues": "Issues",
+      "ssot": "SSOT Viewer",
+      "tenants": "Tenants",
+      "users": "Users",
+      "roles": "Roles",
+      "audit": "Audit Logs",
+      "features": "Features",
+      "integrations": "Integrations",
+      "jobs": "Jobs",
+      "system": "System",
+      "billing": "Billing",
+      "translations": "Translations",
+      "database": "Database",
+      "security": "Security",
+      "analytics": "Analytics",
+      "notifications": "Notifications",
+      "catalog": "Catalog",
+      "impersonate": "Impersonate",
+      "importExport": "Import/Export",
+      "reports": "Reports",
+      "support": "Support",
+      "vendors": "Vendors"
+    },
     "issues": {
       "title": "System Issue Tracker",
       "subtitle": "Full system access • Track and manage all issues",
