fix(i18n): Add 8 missing superadmin nav keys
Added translations for new superadmin sidebar navigation items:
- superadmin.nav.ssot (SSOT Viewer)
- superadmin.nav.catalog (Product Catalog)
- superadmin.nav.impersonate (Impersonate User)
- superadmin.nav.importExport (Import / Export)
- superadmin.nav.reports (Reports)
- superadmin.nav.support (Support Tickets)
- superadmin.nav.vendors (Vendor Management)
- superadmin.nav.customerRequests (Customer Requests)

Both EN and AR translations included.
Resolves: sidebar showing literal key text instead of translated labels

--- a/i18n/sources/superadmin.translations.json
+++ b/i18n/sources/superadmin.translations.json
@@ -24,6 +24,13 @@
     "superadmin.nav.security": "Security Center",
     "superadmin.nav.analytics": "Analytics",
     "superadmin.nav.notifications": "Notifications",
+    "superadmin.nav.catalog": "Product Catalog",
+    "superadmin.nav.impersonate": "Impersonate User",
+    "superadmin.nav.importExport": "Import / Export",
+    "superadmin.nav.reports": "Reports",
+    "superadmin.nav.support": "Support Tickets",
+    "superadmin.nav.vendors": "Vendor Management",
+    "superadmin.nav.customerRequests": "Customer Requests",
     "superadmin.issues.title": "System Issue Tracker",
     "superadmin.issues.subtitle": "Full system access • Track and manage all issues",
     "superadmin.issues.refresh": "Refresh",
@@ -133,6 +140,13 @@
     "superadmin.nav.security": "مركز الأمان",
     "superadmin.nav.analytics": "التحليلات",
     "superadmin.nav.notifications": "الإشعارات",
+    "superadmin.nav.catalog": "كتالوج المنتجات",
+    "superadmin.nav.impersonate": "انتحال مستخدم",
+    "superadmin.nav.importExport": "استيراد / تصدير",
+    "superadmin.nav.reports": "التقارير",
+    "superadmin.nav.support": "تذاكر الدعم",
+    "superadmin.nav.vendors": "إدارة الموردين",
+    "superadmin.nav.customerRequests": "طلبات العملاء",
     "superadmin.issues.title": "متتبع مشاكل النظام",
     "superadmin.issues.subtitle": "وصول كامل للنظام • تتبع وإدارة جميع المشاكل",
     "superadmin.issues.refresh": "تحديث",
