--- a/i18n/sources/select-account.translations.json
+++ b/i18n/sources/select-account.translations.json
@@ -1,8 +1,8 @@
 {
   "en": {
-    "Select an account to view activity": "Select an account to view activity"
+    "Select Account": "Select Account"
   },
   "ar": {
-    "Select an account to view activity": "اختر حساباً لعرض النشاط"
+    "Select Account": "اختر حساباً"
   }
 }
