fix(i18n): correct misleading phone OTP login translations
The phone OTP section in login is an INSTRUCTION area, not an OTP entry form.
Fixed translations to match the actual UX:

- login.phoneOtp.prompt: 'Prefer phone OTP?' (was 'Enter the OTP sent to your phone')
- login.phoneOtp.notice: 'Enter your phone in the email field...' (was 'A verification code has been sent')
- login.phoneOtp.cta: 'Use phone OTP' (was 'Verify Code')

The actual OTP entry happens in the OTPVerification component after form submission.

--- a/i18n/chunks/en/misc.json
+++ b/i18n/chunks/en/misc.json
@@ -15373,9 +15373,9 @@
   "login.personalEmailTab": "Personal Email",
   "login.personalLogin": "Personal Login",
   "login.phoneMode": "Login with Phone",
-  "login.phoneOtp.cta": "Verify Code",
-  "login.phoneOtp.notice": "A verification code has been sent",
-  "login.phoneOtp.prompt": "Enter the OTP sent to your phone",
+  "login.phoneOtp.cta": "Use phone OTP",
+  "login.phoneOtp.notice": "Enter your phone in the email field and submit to receive an OTP.",
+  "login.phoneOtp.prompt": "Prefer phone OTP?",
   "login.propertyDesc": "Manage real estate portfolios",
   "login.quickLogin": "Quick Login",
   "login.quickLoginHint": "Click any role below to auto-fill credentials",
