--- a/i18n/sources/missing-keys-patch.translations.json
+++ b/i18n/sources/missing-keys-patch.translations.json
@@ -194,9 +194,9 @@
     "login.companyNumber": "Company Number",
     "login.enterCompanyNumber": "Enter company number",
     "login.enterPhone": "Enter phone number",
-    "login.phoneOtp.prompt": "Enter the OTP sent to your phone",
-    "login.phoneOtp.notice": "A verification code has been sent",
-    "login.phoneOtp.cta": "Verify Code",
+    "login.phoneOtp.prompt": "Prefer phone OTP?",
+    "login.phoneOtp.notice": "Enter your phone in the email field and submit to receive an OTP.",
+    "login.phoneOtp.cta": "Use phone OTP",
     "login.verificationPending": "Verification pending",
     "login.resendVerification": "Resend verification email",
     "login.appleUnavailable": "Apple Sign-In is not available",
